# wallpape-rs

./: .gitignore  Cargo.toml
libwallpape-rs/: Cargo.toml
libwallpape-rs/src/: effects.rs  lib.rs
libwallpape-rs/src/effects/: voronoi.rs
src/: effects.rs  lib.rs  main.rs  palettes.rs
src/effects/: gradient.rs  little_boxes.rs  mod.rs
wallpape-rs/: Cargo.toml  LICENSE
wallpape-rs/src/: main.rs
