[package]
name = "libwallpape-rs"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Röhrig <mail@danielroehrig.de>"]
license = "MIT OR Apache-2.0"
description = "Generate geometric wallpapers with presets library"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
raqote = "0.8.2"
voronator = "0.2.1"
lazy_static = "1.4.0"
